--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@testing-library/jest-dom": "^5.17.0",
