--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
